--- a/src/component/extension/extension.scss
+++ b/src/component/extension/extension.scss
@@ -5,7 +5,7 @@
     color: #555555;
     padding: 0;
     margin: 0;
-    margin-top: 2px;
+    margin-top: 5px;
 }
 .title2{
     font-weight: lighter;
@@ -14,15 +14,14 @@
     color: #6B6868;
     padding: 0;
     margin: 0;
-    line-height: 1.3;
+    line-height: 1.2;
 }
 
 .extensionContent{
     margin: 0;
     padding: 0;
     padding: 0;
-
-
+    float: right;
 }
 
 .marquedNameAlignement{
