added sytem administration in decoration

--- a/src/component/extension/extension.scss
+++ b/src/component/extension/extension.scss
@@ -31,3 +31,12 @@
     margin: 0;
     padding: 0;
 }
+.menu{
+    margin-top: 3.5em;
+    position: absolute; 
+    float: right;
+    right: 2.35em;
+    // background-origin: padding-box;
+    z-index: 3000000;
+
+}
