--- a/src/component/extension/extension.scss
+++ b/src/component/extension/extension.scss
@@ -5,18 +5,19 @@
     color: #555555;
     padding: 0;
     margin: 0;
+    margin-top: -2px;
     text-decoration: none;
     cursor: pointer;
 }
 
 .title2 {
     font-weight: lighter;
-    font-size: smaller;
+    font-size: 12px;
     line-height: 1.5;
     color: #6B6868;
     padding: 0;
     margin: 0;
-    line-height: 0.5;
+    line-height: 0.8;
     cursor: pointer;
 }
 
@@ -24,12 +25,14 @@
     margin: 0;
     padding: 0;
     padding: 0;
-    float: right;
+    margin-right: 5px;
 }
 
 .marquedNameAlignement {
     float: right;
     cursor: pointer;
+    height: 32px;
+    width: 32px;
 }
 
 .pm0 {
