--- a/src/component/extension/extension.scss
+++ b/src/component/extension/extension.scss
@@ -7,10 +7,6 @@
     margin: 0;
     text-decoration: none;
     cursor: pointer;
-
-    &:hover {
-        color: #034e5e;
-    }
 }
 
 .title2 {
@@ -22,32 +18,33 @@
     margin: 0;
     line-height: 0.5;
     cursor: pointer;
-
-    &:hover {
-        color: #034e5e;
-    }
 }
 
 .extensionContent {
-    margin: 0;
-    padding: 0;
-    padding: 0;
-    margin-left: -126px;
-}
-
-.marquedNameAlignement {
     float: right;
-    cursor: pointer;
-    color:"#6B6868";
+    margin-top: 30px;
 
     &:hover {
         color: #034e5e;
+
+        .title1, .title2{
+            color: #034e5e;
+        }
     }
+}
+
+.marquedNameAlignement {
+    cursor: pointer;
+    color:"#6B6868";
 }
 
 .pm0 {
     margin: 0;
     padding: 0;
+}
+
+.main{
+    margin-right: 5px;
 }
 
 .menu {
