--- a/src/component/extension/extension.scss
+++ b/src/component/extension/extension.scss
@@ -1,6 +1,16 @@
+.title0{
+    font-style: normal;
+    font-size: 20px;
+    font-weight: bolder;
+    color: #555555;
+    padding: 0;
+    margin-top: 4px;
+    text-decoration: none;
+    cursor: pointer;
+}
 .title1 {
     font-style: normal;
-    font-size: bold;
+    font-size: 16px;
     font-weight: bolder;
     color: #555555;
     padding: 0;
