--- a/src/component/extension/extension.scss
+++ b/src/component/extension/extension.scss
@@ -68,9 +68,8 @@
     padding-bottom: 20px;
     border-radius: 5px;
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-
     li {
-    padding: 15px;
+    padding: 10px;
         &:hover {
             border-left: 2px solid rgb(250, 109, 255);
             background-color: rgb(236, 234, 236);
@@ -81,7 +80,7 @@
 
 .titleItems {
     font-style: normal;
-    font-size: medium;
+    font-size: 1em;
     font-weight: bold;
     color: #555555;
     text-decoration: none;
